tests/negative/union_duplicate_name.nano
/* Negative Test: Duplicate union name should fail */
union Status {
    Ok {}
}

union Status {
    Error {}
}

fn main() -> int {
    return 0
}

shadow main {
    assert (== (main) 0)
}

